# sql-problems

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
src/analyst-builder/: cake-vs-pie.sql  kellys-3rd-purchase.sql  temperature-fluctuations.sql
src/data-expert/: _setup.sql  calculate-median-searches.sql  commonly-bought-product-pairs.sql  consecutive-20-point-seasons.sql  countries-drink-preferences.sql  department-reduction-criteria.sql  leisure-activity-resorts-by-country.sql  multi-component-bugs-impact.sql  optimal-gift-packaging.sql  second-item-preferred-brand-match.sql  server-fleet-uptime-full-days.sql  soccer-series-winner.sql  subcat-per-region.sql  unique-conversation-threads.sql  warehouse-item-optimization.sql
src/data-lemur/: median-search-freq.sql  pizzas-topping-cost.sql  prime-warehouse-storage.sql  repeated-payments.sql  total-utilization-time.sql  updated-status.sql  user-retention.sql  yoy-growth-rate.sql
