[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "sql-problems"
version = "0.0.0"
description = "Solutions to SQL problems."
authors = ["Bilbottom"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group]
dev.optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
